<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/authFragment">

    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.chess_trainer_client.ui.AuthFragment"
        android:label="@string/auth_title">
        <action
            android:id="@+id/action_authFragment_to_menuFragment"
            app:destination="@id/menuFragment"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/menuFragment"
        android:name="com.example.chess_trainer_client.ui.MenuFragment"
        android:label="@string/menu_title">
        <action
            android:id="@+id/action_menuFragment_to_authFragment"
            app:destination="@id/authFragment"
            app:popUpTo="@id/menuFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_menuFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_menuFragment_to_puzzleFragment"
            app:destination="@id/puzzleFragment" />
        <action
            android:id="@+id/action_menuFragment_to_openingsFragment"
            app:destination="@id/openingsFragment" />
        <action
            android:id="@+id/action_menuFragment_to_savedGamesFragment"
            app:destination="@id/savedGamesFragment" />
    </fragment>

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.chess_trainer_client.ui.GameFragment"
        android:label="@string/game">
        <argument
            android:name="mode"
            app:argType="string"
            android:defaultValue="two_player" />
        <argument
            android:name="saved_game_id"
            app:argType="long"
            android:defaultValue="-1L" />
        <argument
            android:name="saved_game_fen"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="saved_game_color"
            app:argType="string"
            android:defaultValue="WHITE" />
        <argument
            android:name="saved_game_mode"
            app:argType="string"
            android:defaultValue="two_player" />
        <action
            android:id="@+id/action_gameFragment_to_menuFragment"
            app:destination="@id/menuFragment"
            app:popUpTo="@id/menuFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/puzzleFragment"
        android:name="com.example.chess_trainer_client.ui.PuzzleFragment"
        android:label="@string/puzzles">
        <action
            android:id="@+id/action_puzzleFragment_to_menuFragment"
            app:destination="@id/menuFragment"
            app:popUpTo="@id/menuFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/openingsFragment"
        android:name="com.example.chess_trainer_client.ui.OpeningsFragment"
        android:label="@string/openings">
        <action
            android:id="@+id/action_openingsFragment_to_menuFragment"
            app:destination="@id/menuFragment"
            app:popUpTo="@id/menuFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/savedGamesFragment"
        android:name="com.example.chess_trainer_client.ui.SavedGamesFragment"
        android:label="@string/saved_games">
        <action
            android:id="@+id/action_savedGamesFragment_to_menuFragment"
            app:destination="@id/menuFragment"
            app:popUpTo="@id/menuFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_savedGamesFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>
</navigation>

